--- a/web/src/app/pages/movimientos/movimientos.component.html
+++ b/web/src/app/pages/movimientos/movimientos.component.html
@@ -67,10 +67,10 @@
         @for (mov of movimientos; track mov.id) {
           <tr class="border-b hover:bg-gray-50">
             <td class="p-2">{{ mov.id }}</td>
-            <td class="p-2">{{ mov.producto?.Nombre }}</td>
+            <td class="p-2">{{ mov.producto?.sku + "-" + mov.producto?.marca + "-" + mov.producto?.modelo}}</td>
             <td class="p-2">{{ mov.tipo }}</td>
             <td class="p-2">{{ mov.cantidad }}</td>
-            <td class="p-2">{{ mov.usuario?.Nombre }}</td>
+            <td class="p-2">{{ mov.usuario?.nombre }}</td>
             <td class="p-2">{{ mov.fecha | date: 'short' }}</td>
           </tr> 
         }
